#10257 폼 리팩토링 - 레이아웃 구성

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -170,6 +170,10 @@ input, button, select, optgroup, textarea {
   justify-content: space-between;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .align-items-start {
   align-items: flex-start;
 }
