--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -462,3 +462,4 @@ $z-index-between-gnb-event:			         50;
 $z-index-event:				                 25;
 $z-index-between-event-and-default:	         10;
 $z-index-auto:                               auto;
+$z-index-hidden:                             -1;
