--- a/src/main/resources/public/template/formRefactoring/fragments/formHead.html
+++ b/src/main/resources/public/template/formRefactoring/fragments/formHead.html
@@ -9,6 +9,7 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/tagify/tagify.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/form2.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
     <script th:src="@{/assets/js/util/util-alice.js}"></script>
