신청서아이콘, CI타입 아이콘 관리 위치 변경 (#10280)

--- a/src/main/resources/public/template/document/documentList.html
+++ b/src/main/resources/public/template/document/documentList.html
@@ -18,7 +18,7 @@
                 <h3 th:text="${document.documentName}" class="text-ellipsis"></h3>
                 <label th:text="${document.documentDesc}" class="document-description text-ellipsis"></label>
                 <div class="document-icon">
-                    <img th:src="@{/assets/media/images/document/{documentIcon}(documentIcon=${document.documentIcon})}"/>
+                    <img th:src="${document.documentIcon}"/>
                 </div>
             </div>
         </div>
