#10235 CI 컴포넌트 "수정불가" 상태이더라도 CI 상세내용은 확인 가능해야 한다.

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4248,7 +4248,11 @@ body.modal-active {
 .component .field-group .field-content .ci-table tr th button, .component .field-group .field-content .ci-table tr td button {
   padding: 0;
 }
-.component .field-group .field-content .ci-table tr th button .icon-search, .component .field-group .field-content .ci-table tr td button .icon-search {
+.component .field-group .field-content .ci-table tr th button.icon-search-area, .component .field-group .field-content .ci-table tr td button.icon-search-area {
+  pointer-events: all !important;
+  background: #ffffff !important;
+}
+.component .field-group .field-content .ci-table tr th button.icon-search-area .icon-search, .component .field-group .field-content .ci-table tr td button.icon-search-area .icon-search {
   display: inline-block;
   width: 1.25rem;
   height: 1.25rem;
