--- a/src/main/resources/public/src/scss/formRefactoring/_variables.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_variables.scss
@@ -48,18 +48,18 @@ $component-icon-hover-bg-color:                    rgba(235, 235, 235, 0.3);
 
 // icon
 $icon-arrow-left:                                  $icon-folder-path + "icon_arrow_left.svg";
-$icon-component-inputbox:                          $icon-folder-path + "form/context-menu/icon-inputbox.svg";
-$icon-component-textarea:                          $icon-folder-path + "form/context-menu/icon-textbox.svg";
-$icon-component-text-editor:                       $icon-folder-path + "form/context-menu/icon-textbox.svg";
+$icon-component-inputBox:                          $icon-folder-path + "form/context-menu/icon-inputbox.svg";
+$icon-component-textArea:                          $icon-folder-path + "form/context-menu/icon-textbox.svg";
+$icon-component-textEditor:                        $icon-folder-path + "form/context-menu/icon-textbox.svg";
 $icon-component-dropdown:                          $icon-folder-path + "form/context-menu/icon-dropdown.svg";
 $icon-component-radio:                             $icon-folder-path + "form/context-menu/icon-radio.svg";
-$icon-component-checkbox:                          $icon-folder-path + "form/context-menu/icon-checkbox.svg";
+$icon-component-checkBox:                          $icon-folder-path + "form/context-menu/icon-checkbox.svg";
 $icon-component-date:                              $icon-folder-path + "form/context-menu/icon-date.svg";
 $icon-component-time:                              $icon-folder-path + "form/context-menu/icon-time.svg";
-$icon-component-datetime:                          $icon-folder-path + "form/context-menu/icon-datetime.svg";
-$icon-component-fileupload:                        $icon-folder-path + "form/context-menu/icon-fileupload.svg";
-$icon-component-custom-code:                       $icon-folder-path + "form/context-menu/icon-custom-code.svg";
-$icon-component-dynamic-row-table:                 $icon-folder-path + "form/context-menu/icon-dynamic-row-table.svg";
+$icon-component-dateTime:                          $icon-folder-path + "form/context-menu/icon-datetime.svg";
+$icon-component-fileUpload:                        $icon-folder-path + "form/context-menu/icon-fileupload.svg";
+$icon-component-customCode:                        $icon-folder-path + "form/context-menu/icon-custom-code.svg";
+$icon-component-dynamicRowTable:                   $icon-folder-path + "form/context-menu/icon-dynamic-row-table.svg";
 $icon-component-ci:                                $icon-folder-path + "form/context-menu/icon-ci.svg";
 
 $icon-component-label:                             $icon-folder-path + "form/context-menu/icon-label.svg";
