--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4248,11 +4248,7 @@ body.modal-active {
 .component .field-group .field-content .ci-table tr th button, .component .field-group .field-content .ci-table tr td button {
   padding: 0;
 }
-.component .field-group .field-content .ci-table tr th button.icon-search-area, .component .field-group .field-content .ci-table tr td button.icon-search-area {
-  pointer-events: all !important;
-  background: #ffffff !important;
-}
-.component .field-group .field-content .ci-table tr th button.icon-search-area .icon-search, .component .field-group .field-content .ci-table tr td button.icon-search-area .icon-search {
+.component .field-group .field-content .ci-table tr th button .icon-search, .component .field-group .field-content .ci-table tr td button .icon-search {
   display: inline-block;
   width: 1.25rem;
   height: 1.25rem;
@@ -4478,7 +4474,7 @@ body.modal-active {
 }
 
 .component[data-displayType=readonly] input[type=text],
-.component[data-displayType=readonly] button,
+.component[data-displayType=readonly] button:not(.icon-search-area),
 .component[data-displayType=readonly] select,
 .component[data-displayType=readonly] textarea {
   background-color: #F7F8F9 !important;
