--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -236,13 +236,9 @@
               button { 
                 padding: 0;
                 // 돋보기 아이콘
-                &.icon-search-area {
-                  pointer-events: all !important;
-                  background: $white !important;
-                  .icon-search {
-                    display: inline-block;
-                    @include maskImage('#{$icon-folder-path}icon_search.svg', 1.25rem, 1.25rem, no-repeat, center, 1.25rem 1.25rem, $gray); // 20px 20px
-                  }
+                .icon-search {
+                  display: inline-block;
+                  @include maskImage('#{$icon-folder-path}icon_search.svg', 1.25rem, 1.25rem, no-repeat, center, 1.25rem 1.25rem, $gray); // 20px 20px
                 }
                 // 편집 아이콘
                 .icon-edit {
@@ -439,7 +435,7 @@
 // readonly
 .component[data-displayType="readonly"] {
   input[type=text],
-  button,
+  button:not(.icon-search-area),
   select,
   textarea {
     background-color: $component-disabled-bg-color !important;
