신청서아이콘, CI타입 아이콘 관리 위치 변경 (#10280)
- CI 컴포넌트에서 CI 타입 아이콘 작동 변경

--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -5,6 +5,7 @@
     <div class="cmdb-ci-content-edit flex-column">
         <div class="edit-form">
             <input type="hidden" id="ciId" th:value="${ciData?.ciId}"/>
+            <input type="hidden" id="typeIconData" th:value="${ciData?.ciIconData}"/>
             <!-- CI No -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="ciNo">
