--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -30,6 +30,7 @@
             </td>
             <td style="width: 15%;" class="align-left" id="ciNo" th:text="${ci.ciNo}"></td>
             <td style="width: 0%; display: none;" id="ciIcon" th:text="${ci.ciIcon}"></td>
+            <td style="width: 0%; display: none;" id="ciIconData" th:text="${ci.ciIconData}"></td>
             <td style="width: 0%; display: none;" id="typeId" th:text="${ci.typeId}"></td>
             <td style="width: 15%;" class="align-left" id="typeName" th:text="${ci.typeName}"></td>
             <td style="width: 15%;" class="align-left" id="ciName" th:text="${ci.ciName}"></td>
