--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -277,6 +277,34 @@
           border-radius:  0.0625rem; // 1px
           margin-bottom: 0.625rem; // 10px
         }
+
+        // todo: 변경 이력 임시 디자인(##10126)
+        .ci-history-list {
+          table {
+            width: 100%;
+            .list-head {
+              tr {
+                color: $light-black;
+                border-bottom: 0.125rem solid $default-gray;
+              }
+            }
+            .list-body {
+              display: block;
+              color: $dark-gray;
+              overflow-y: auto;
+              .list-row {
+                display: table;
+                width: 100%;
+                height: 3.125rem; // 50px
+                line-height: 3.125rem; // 50px
+                & > td {
+                  display: inline-block; // 말줄임 적용을 위해 추가
+                  vertical-align: middle;
+                }
+              }
+            }
+          }
+        }
       }
 
       .table-set {
